--- a/src/components/Scales/Scales.module.css
+++ b/src/components/Scales/Scales.module.css
@@ -159,13 +159,31 @@
   border-bottom: 1px solid #eee;
 }
 
+.scalesSelectedProductInfo h3 {
+  margin-bottom: 1rem;
+}
+
+.productDetailsContent {
+  display: flex;
+  align-items: flex-start;
+  gap: 1rem;
+  text-align: left;
+  justify-content: center; 
+}
+
 .scalesSelectedProductImage {
   width: 120px;
   height: 120px;
   object-fit: cover;
   border-radius: 50%;
-  margin-top: 5px;
   border: 3px solid #007bff;
+  flex-shrink: 0;
+  margin-bottom: 0.5rem;
+}
+
+.productTextInfo {
+  flex-grow: 1;
+  max-width: 100%;
 }
 
 .scalesSelectedProductInfo p {
@@ -292,5 +310,14 @@
   .scalesControlColumn {
     min-width: unset;
     width: 100%;
+  }
+
+  .productDetailsContent {
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .scalesSelectedProductImage {
+    margin-right: 0;
   }
 }
